k8s/todoapp-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp-auth
  template:
    metadata:
      labels:
        app: todoapp-auth
    spec:
      containers:
        - name: todoapp-auth
          image: dalthonmh/todoapp-auth
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-auth-srv
spec:
  selector:
    app: todoapp-auth
  ports:
    - name: todoapp-auth
      protocol: TCP
      port: 8080
      targetPort: 8080
