k8s/todoapp-core-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-core-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp-core
  template:
    metadata:
      labels:
        app: todoapp-core
    spec:
      containers:
        - name: todoapp-core
          image: dalthonmh/todoapp-core
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-core-srv
spec:
  selector:
    app: todoapp-core
  ports:
    - name: todoapp-core
      protocol: TCP
      port: 3000
      targetPort: 3000
