k8s/todoapp-mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-mysql-depl
  labels:
    app: todoapp-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp-mysql
  template:
    metadata:
      labels:
        app: todoapp-mysql
    spec:
      containers:
        - name: todoapp-mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql

            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: todoapp-mysql-pv-claim

        - name: mysql-initdb
          configMap:
            name: mysql-initdb-config

---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-mysql-srv
spec:
  selector:
    app: todoapp-mysql
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
