k8s/todoapp-web-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-web-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp-web
  template:
    metadata:
      labels:
        app: todoapp-web
    spec:
      containers:
        - name: todoapp-web
          image: dalthonmh/todoapp-web

---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-web-srv
spec:
  selector:
    app: todoapp-web
  ports:
    - name: todoapp-web
      protocol: TCP
      port: 5173
      targetPort: 5173
